test/fixtures/install-consumer/negative/forbidden_future_kernel.ml
(* A package consumer must not be able to import the Future kernel directly. *)
module Private = Temporal_future_kernel
